...
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"



        android:layout_above="@id/user_navbar"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/user_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
